--- a/assets/css/extended/tokyonight.css
+++ b/assets/css/extended/tokyonight.css
@@ -161,7 +161,7 @@ pre {
 blockquote {
   border-left: 3px solid var(--yellow) !important;
   color: var(--fg-dark) !important;
-  padding: 1rem 1.5rem;
+  padding: 1rem 1.5rem !important;
   margin: 1.5rem 0;
 }
 
@@ -233,6 +233,9 @@ button:hover {
 }
 
 /* Social icons */
+.social-icons {
+  display: flex;
+}
 .social-icons a {
   color: var(--fg) !important;
 }
