--- a/themes/PaperMod/assets/css/common/post-single.css
+++ b/themes/PaperMod/assets/css/common/post-single.css
@@ -250,8 +250,9 @@
 .post-content figure > figcaption {
   color: var(--primary);
   font-size: 16px;
-  font-weight: bold;
   margin: 8px 0 16px;
+  opacity: 0.7;
+  font-style: italic;
 }
 
 .post-content figure > figcaption > p {
